--- a/DwMember/Base.lproj/LaunchScreen.storyboard
+++ b/DwMember/Base.lproj/LaunchScreen.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -21,16 +21,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="card" translatesAutoresizingMaskIntoConstraints="NO" id="0OT-Ef-Irn">
-                                <rect key="frame" x="0.0" y="422" width="375" height="245"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="WechatIMG80" translatesAutoresizingMaskIntoConstraints="NO" id="0OT-Ef-Irn">
+                                <rect key="frame" x="0.0" y="567" width="375" height="100"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="0OT-Ef-Irn" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" constant="-422" id="CIB-Vf-pIz"/>
-                            <constraint firstItem="0OT-Ef-Irn" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="211" id="Ke5-xg-haN"/>
-                            <constraint firstItem="0OT-Ef-Irn" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="WbB-gF-QDb"/>
-                            <constraint firstItem="0OT-Ef-Irn" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="la9-Cy-9Ez"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="0OT-Ef-Irn" secondAttribute="bottom" constant="10" id="000-il-fnq"/>
+                            <constraint firstAttribute="trailing" secondItem="0OT-Ef-Irn" secondAttribute="trailing" id="0Sm-BB-7BL"/>
+                            <constraint firstItem="0OT-Ef-Irn" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="547" id="bNn-on-931"/>
+                            <constraint firstItem="0OT-Ef-Irn" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="eq1-zW-yMc"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -40,6 +40,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="card" width="364" height="229"/>
+        <image name="WechatIMG80" width="816" height="258"/>
     </resources>
 </document>
