--- a/DwMember/Base.lproj/LaunchScreen.storyboard
+++ b/DwMember/Base.lproj/LaunchScreen.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -21,16 +21,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="WechatIMG80" translatesAutoresizingMaskIntoConstraints="NO" id="0OT-Ef-Irn">
-                                <rect key="frame" x="0.0" y="567" width="375" height="100"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="WechatIMG80" translatesAutoresizingMaskIntoConstraints="NO" id="0OT-Ef-Irn">
+                                <rect key="frame" x="0.0" y="587" width="375" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="CTC-Ob-tzK"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="0OT-Ef-Irn" secondAttribute="bottom" constant="10" id="000-il-fnq"/>
-                            <constraint firstAttribute="trailing" secondItem="0OT-Ef-Irn" secondAttribute="trailing" id="0Sm-BB-7BL"/>
-                            <constraint firstItem="0OT-Ef-Irn" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="547" id="bNn-on-931"/>
-                            <constraint firstItem="0OT-Ef-Irn" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="eq1-zW-yMc"/>
+                            <constraint firstAttribute="trailing" secondItem="0OT-Ef-Irn" secondAttribute="trailing" id="Sfy-kX-Vss"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="0OT-Ef-Irn" secondAttribute="bottom" constant="10" id="d7M-3L-gTI"/>
+                            <constraint firstItem="0OT-Ef-Irn" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="e0q-JI-Rn3"/>
                         </constraints>
                     </view>
                 </viewController>
